<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="list_no_data">Нет данных для отображения</string>
    <string name="file_error">Не удалось прочитать файл</string>
    <string name="file_not_found_error">Файл не найден!</string>
    <string name="json_error">Не удалось разобрать файл</string>
    <string name="app_name">Банк аргументов</string>
    <string name="about">О программе</string>
    <string name="refresh">Обновить</string>
    <string name="settings">Настройки</string>
    <string name="image">Изображение</string>
    <string name="preference_user_arguments">Пользовательские аргументы</string>
    <string name="summary_user_arguments">Показывать проблемы и аргументы, добавленные пользователем</string>
    <string name="title_dialog_user_arguments">Укажите путь</string>
    <string name="summary_dialog_user_arguments">Путь к файлу аргументов</string>
    <string name="preference_user_arguments_path">Путь к файлу</string>
    <string name="about_string">Банк аргументов для задания C1 ЕГЭ по русскому языку. На данный момент в базе содержится 92 проблемы и 269 литературных аргументов и цитат. О любых опечатках/ошибках/багах сообщайте мне на почту.</string>
    <string name="copyright">Copyright © 2012  Валерий Харитонов (kharvd@gmail.com)</string>
    <string name="json_asset_name">arguments.json</string>
    <string name="close">Закрыть</string>
    <string name="versionNumber">0.9.2</string>

</resources>