<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preference_user_arguments" >
        <CheckBoxPreference
            android:key="user_arguments_preference"
            android:summary="@string/summary_user_arguments"
            android:title="@string/preference_user_arguments" />

        <EditTextPreference
            android:dependency="user_arguments_preference"
            android:dialogTitle="@string/title_dialog_user_arguments"
            android:key="user_arguments_path"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/summary_dialog_user_arguments"
            android:title="@string/preference_user_arguments_path" />
    </PreferenceCategory>

</PreferenceScreen>